variables.Variables.scala.error
Erreur de compilation :
Variables:4: error: reassignment to val
x=x+1}
 ^Variables:8: error: reassignment to val
x=0 
 ^